Add a note about the vm images and a step specific for SLES

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -20,6 +20,12 @@ All tools are included in these images greatly simplifying deployment.
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
+[IMPORTANT]
+====
+Customized {productname} {productnumber} VM images are provided only for {sle-micro} {microversion}.
+To run the product on {sles} {bci-suma}, use the standard {sles} {bci-suma} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
+====
+
 [NOTE]
 ====
 For more information on preparing raw images, see:
