--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -3,18 +3,26 @@
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgradm`` tool first.
 
 .Procedure: Upgrading Server
-. Refresh software repository with [command]``zypper``:
+. Refresh software repositories with [command]``zypper``:
 +
 ----
 zypper ref
 ----
-. Apply available updates with [command]``transactional-update``:
+. Apply available updates:
++
+.. For {sle-micro}:
 +
 ----
 transactional-update
 ----
-. If updates were applied, [literal]``reboot``.
-
+If updates were applied, [literal]``reboot``.
++
+.. For {sles}:
++
+----
+zypper up
+----
++
 . The {productname} Server container can be updated using the following command:
 +
 
