--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -3,14 +3,27 @@
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgrpxy`` tool first.
 
 .Procedure
-. Run the command:
+. Refresh software repositories with [command]``zypper``:
++
+----
+zypper ref
+----
+
+. Apply available updates:
++
+.. For {sle-micro}:
 +
 ----
 transactional-update
 ----
-
-. If updates were applied, [literal]``reboot``.
-
+If updates were applied, [literal]``reboot``.
++
+.. For {sles}:
++
+----
+zypper up
+----
++
 . The {productname} {productnumber} Proxy containers running on [literal]``podman`` can be updated using the following command:
 +
 
