Add the forgotton smtp_server parameter in docs

--- a/modules/administration/pages/troubleshooting/tshoot-mail.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-mail.adoc
@@ -24,6 +24,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 For secure mail communication, you can enable authentication, define username and password, and enable [literal]``SSL`` or [literal]``STARTLS`` in [path]``/etc/rhn/rhn.conf``:
 
 ----
+java.smtp_server = string (default: localhost)
 java.smtp_port = integer (default: 25)
 java.smtp_auth = true/false (default: false)
 java.smtp_ssl = true/false (default: false)
