--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -20,12 +20,32 @@ The main characteristics of this feature are:
 
 == Types of registration
 
-Hub online synchronization supirts two types of registration of the peripheral server on the hub server. 
-The registration is reliant on te exstance of a token which can be generated in two different ways.
-The type of token generation also determines the type of registration. 
+Hub online synchronization is configured from menu menu:Admin[Hub Configuration].
 
-From peripheral to hub:: 
-A token is generated on the peripheral server and passed it to the administrator of the hub server.
+Configuration process uses token which uniquely identifies peripheral server's connection to the hub.
+
+There are two ways to create a token, link them here...
+
+
+=== Token generation initiated on the peripheral server
+
+//A token is generated on the peripheral server and passed it to the administrator of the hub server.
+
+.Procedure:
+. On the peripheral server, go to menu:Admin[Hub Configuration > Access Tokens].
+. Click button btn:[Add token] and select option [literal]``Issue new token``.
+. In the field [literal]``Server FQDN`` on the form that opens type the FQDN of the hub server that will be using this token.
+. Click btn:[Issue].
+. A new form with the succesfuly generated token appears and button btn:[Copy].
+
++
+
+[IMPORTANT]
+==== 
+The only time token is displayed is at the time of its creation.
+Make sure to copy it and store safely 
+
+=== Token generation initiated from the hub server
 
 From hub to peripheral::
 The administrator of the hub server has also an admin account on the peripheral server and can initiate token generation.
