--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -24,14 +24,21 @@ Hub online synchronization is configured from menu menu:Admin[Hub Configuration]
 
 Configuration process uses token which uniquely identifies peripheral server's connection to the hub.
 
-There are two ways to create a token, link them here...
+There are two ways to register a peripheral server to the hub server:
+
+. by using a combination of token creation on the peripheral, and subsequent registration on the hub server.
+  This method uses procedures <<peripheral-token-generation>> and <<token-transfer>>.
+. by direct registration from the hub, without any interactions with the peripheral server. 
+  The steps are described in procedure <<direct-registration>>.
 
 
-=== Token generation initiated on the peripheral server
 
-//A token is generated on the peripheral server and passed it to the administrator of the hub server.
+=== Indirect (do we have an official name??) registration
 
-.Procedure:
+Before being registered to the hub server, a token needs to be generated on the peripheral server and passed it to the administrator of the hub server.
+
+[[peripheral-token-generation]]
+.Procedure: Generating token on the peripheral server
 . On the peripheral server, go to menu:Admin[Hub Configuration > Access Tokens].
 . Click button btn:[Add token] and select option [literal]``Issue new token``.
 . In the field [literal]``Server FQDN`` on the form that opens type the FQDN of the hub server that will be using this token.
@@ -43,11 +50,76 @@ There are two ways to create a token, link them here...
 [IMPORTANT]
 ==== 
 The only time token is displayed is at the time of its creation.
-Make sure to copy it and store safely 
+Make sure to copy it and store safely .
+====
 
-=== Token generation initiated from the hub server
+. Once generated, the token appears on the screen [literal]``Access Tokens``.
 
-From hub to peripheral::
-The administrator of the hub server has also an admin account on the peripheral server and can initiate token generation.
+The generated token needs to be transferred to the hub server before it can be used. 
 
+
+[[token-transfer]]
+.Procedure: Registering to the hub server with the token
+. On the hub server, go to menu:Hub Configuration[Peripherals Configuration].
+. Click button btn:[Add peripheral].
+  A new form [literal]``Register a new peripheral server`` opens.
+. In the field [literal]``Peripheral Server FQDN`` enter the name of the peripheral server.
+. In the field [literal]``Registration mode`` select option [literal]``Existing token``.
+. In the field [literal]``Token`` paste the token that was created on the peripheral server.
+. In the field [literal]``Root CA certificate`` specify the certificate using one of the options:
+  * Use option [literal]``Not needed`` if both hub and peripheral servers have the same certificate authority.
+  * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
+  * Use option [literal]``Paste a PEM certificate`` to paste a certificate.  
+. Click button btn:[Register].
+  A newly registered peripheral serevr will appear on screen [literal]``Peripherals Configuration``.
+
+
+
+=== Direct (do we have an official name??) registration
+
+It is possible initiate the registration of a peripheral server from hub server, without any interaction with the peripheral server.
+
+[[direct-registration]]
+.Procedure: Complete registration from the hub server
+
+. On the hub server, go to menu:Hub Configuration[Peripherals Configuration].
+. Click button btn:[Add peripheral].
+  A new form [literal]``Register a new peripheral server`` opens.
+. In the field [literal]``Peripheral Server FQDN`` enter the name of the peripheral server.
+. In the field [literal]``Registration mode`` select option [literal]``Administrator User/Password``.
+. In the fields [literal]``Username`` and [literal]``Password`` enter the credentials for the peripheral server.
+. In the field [literal]``Root CA certificate`` specify the certificate using one of the options:
+  * Use option [literal]``Not needed`` if both hub and peripheral servers have the same certificate authority.
+  * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
+  * Use option [literal]``Paste a PEM certificate`` in cases when PEM certificate is used.
+ in cases when PEM certificate is used.
+. Click button btn:[Register].
+
+
+[IMPORTANT]
+====
+All existing tokens are shown in menu:Hub Configuration[Access Tokens].
+Be careful when using option btn:[Invalidate] as it permanently delets the existing token and removes the connection established between the hub and peripheral servers.
+====
+
+//TO DO: 2025-04-22 - Add some infor about issued and consumed tokens and invalidating.
+
+=== Access hub server details from the peripheral server
+
+.Procedure: Accessing hub server details
+. On the peripheral server, go to menu:Hub Configuration[Hub Details].
+. On the screen [literal]``Hub Details`` find the information about the hub server.
+. Download, edit or delete the root certificate by clicking btn:[Download], btn:[Edit] or btn:[Delete] respectively.
+
++
+
+[NOTE]
+====
+Amending any certificate details will break the connection between the servers.
+====
+
++
+
+. To deregister this peripheral server from the hub, click btn:[Deregister].
+ 
 
