--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -122,4 +122,11 @@ Amending any certificate details will break the connection between the servers.
 
 . To deregister this peripheral server from the hub, click btn:[Deregister].
  
+//// HERE
+
+[IMPORTANT]
+==== 
+To use GPG....
+For more information about setting up own GPG key, see xref:administration:repo-metadata.adoc[].
+====
 
