--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -92,7 +92,6 @@ It is possible initiate the registration of a peripheral server from hub server,
   * Use option [literal]``Not needed`` if both hub and peripheral servers have the same certificate authority.
   * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
   * Use option [literal]``Paste a PEM certificate`` in cases when PEM certificate is used.
- in cases when PEM certificate is used.
 . Click button btn:[Register].
 
 
@@ -102,31 +101,46 @@ All existing tokens are shown in menu:Hub Configuration[Access Tokens].
 Be careful when using option btn:[Invalidate] as it permanently delets the existing token and removes the connection established between the hub and peripheral servers.
 ====
 
-//TO DO: 2025-04-22 - Add some infor about issued and consumed tokens and invalidating.
+//TO DO: 2025-04-22 - Add some info about issued and consumed tokens and invalidating.
 
 === Access hub server details from the peripheral server
 
 .Procedure: Accessing hub server details
 . On the peripheral server, go to menu:Hub Configuration[Hub Details].
 . On the screen [literal]``Hub Details`` find the information about the hub server.
-. Download, edit or delete the root certificate by clicking btn:[Download], btn:[Edit] or btn:[Delete] respectively.
+. To download, edit or delete the root certificate, clicking btn:[Download], btn:[Edit] or btn:[Delete] respectively.
 
 +
 
 [NOTE]
 ====
-Amending any certificate details will break the connection between the servers.
+Amending certificate details will break the connection between the servers.
 ====
 
 +
 
+. Field [literal]``GPG Public Key`` shows whether the GPG key has been configured for the hub server.
+  For more information about GPG keys between hub and peripheral servers, see <<hub-online-sync>>.
+
 . To deregister this peripheral server from the hub, click btn:[Deregister].
  
-//// HERE
 
-[IMPORTANT]
-==== 
-To use GPG....
+[[hub-online-sync]]
+==== GPG key usage with hub online synhronization
+
+When the packages are signed with GPG key, the key is automatically transmitted from hub to peripheral server.
+
+By default, {productname} is not signing meta data.
+Therefore, when the pripheral server is downloading data from the hub server, unless the customer has created their own GPG key then they have no way of checking if the downloaded rpms have valid signature.
+
+To enable checking of the data integrity, the GPG key needs to be created on the hub side.
+When the peripheral server is configured to communicate with the hub, the public GPG key will then automatically be transferred to it.
+
+Once the GPG key is created on the hub, field [literal]``GPG Public Key`` will be set to show that this serevr is using the GPG key.
 For more information about setting up own GPG key, see xref:administration:repo-metadata.adoc[].
-====
 
+
+//HERE
+== Deregistering peripheral server
+. To deregister this peripheral server from the hub, click btn:[Deregister].
+. TBC
