Add instructions to install a PTF on an air-gapped server
Since PTF only has container images, not the RPMs packing them, document
the podman save / podman load way to install a PTF.

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-air-gapped-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-air-gapped-deployment-mlm.adoc
@@ -41,7 +41,7 @@ User should make the needed RPM available on the internal network. That can be d
 +
 [source,shell]
 ----
-transactional-update pkg install mgradm* mgrctl* suse-manager-5.0-$ARCH$-server-*
+transactional-update pkg install mgradm* mgrctl* multi-linux-manager-5.1-$ARCH$-server-*
 ----
 +
 . Reboot.
@@ -51,3 +51,56 @@ transactional-update pkg install mgradm* mgrctl* suse-manager-5.0-$ARCH$-server-
 For more detailed information about installing {productname} Server on {sl-micro}, see xref:container-deployment/mlm/server-deployment-mlm.adoc[Deploy Server as a Virtual Machine].
 
 To upgrade {productname} Server, users should upgrade all packages in the system and follow the procedures defined in xref:container-management/updating-server-containers.adoc[Server Upgrade].
+
+== PTFs
+
+The PTF images are not available as packages.
+This means that they should be pulled using [command]``podman`` on a machine with internet access, then saved in an archive, transferred to the air-gapped machine and loaded there.
+
+.Procedure: Pulling the image on a machine with internet access
+. Install [command]``podman``.
+. Authenticate against the {suse} Registry using the SCC credentials:
+
++
+
+[source,shell]
+----
+set +o history
+echo SCC_MIRRORING_PASSWORD | podman login -u "SCC_MIRRORING_USER" --password-stdin registry.suse.com
+set -o history
+----
+. Create a [path]``/tmp/ptf-images`` temporary file with the URL of the PTF images, one per line.
+  In most of the cases only the server image is needed and it can be created with a command like the following, after replacing the [command]``SCC_USERID`` and [command]``PTFID`` values.
++
+[source,shell]
+----
+SCC_USERID=aXXXX
+PTFID=12345
+echo "registry.suse.com/a/$SCC_USERID/$PTFID/multi-linux-manager/5.1/x86_64/server:latest-ptf-$PTFID" >>/tmp/ptf-images
+----
+
+. Pull each of the container images of the PTF and save them in a tar archive.
+
++
+
+[source,shell]
+----
+for image in `cat /tmp/ptf-images`; do
+    podman pull $image
+done
+podman save -o /tmp/ptf-images.tar `cat /tmp/ptf-images`
+----
+. Transfer the [path]``/tmp/ptf-images.tar`` images archive on the server to patch.
+
+.Procedure: Loading the images on the server to patch
+. Ensure the [path]``ptf-images.tar`` file is available on the server.
+. Load the images from the archive:
+
++
+
+[source,shell]
+----
+podman load -i ptf-images.tar
+----
+. Install the PTF using `mgradm support ptf podman` as would be done on a connected machine.
+  Because the images are already loaded they will not be pulled.
