--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -24,7 +24,8 @@ endif::[]
 
 [IMPORTANT]
 ====
-This guide only covers the migration from {productname} 4.3 to {productnumber}. Migrating an existing {productname} {productnumber} instance to the same version while switching the host os from {sle-micro} {microversion} to {sles} {bci-suma}, or vice versa, is not handled by the [command]``mgradm migrate`` command.
+This guide only covers the migration from {productname} 4.3 to {productnumber}.
+Migrating an existing {productname} {productnumber} instance to the same version while switching the host operating system from {sle-micro} {microversion} to {sles} {bci-suma}, or vice versa, is not handled by the [command]``mgradm migrate`` command.
 ====
 
 === Hostnames
