Add the specific copyright page for Uyuni

--- a/modules/legal/nav-legal-guide.adoc
+++ b/modules/legal/nav-legal-guide.adoc
@@ -17,3 +17,7 @@ ifeval::[{mlm-content} == true]
 ** xref:copyright.adoc[Copyright Notice]
 ** xref:trademarks.adoc[Trademarks]
 endif::[]
+
+ifeval::[{uyuni-content} == true]
+** xref:copyright-uyuni.adoc[Copyright Notice]
+endif::[]
