Fixed removing Salt bundle client procedure in Client Configuration (#3883) (#3888)
https://github.com/SUSE/spacewalk/issues/26984
* fix salt minion proç too
* Update modules/client-configuration/pages/delete-clients.adoc

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -92,21 +92,30 @@ Instead of [command]``zypper`` use equivalent packager commands such as [command
 
 .Procedure: Deleting SLES 12 and 15 Clients
 . Stop the salt-minion service:
+
 +
+
+[source,shell]
 ----
 systemctl stop salt-minion
 ----
 +
 . Remove the repositories and configuration files:
+
 +
+
+[source,shell]
 ----
-rm /etc/zypp/repos.d/susemanager\:channels.repo
+rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
 rm -r /etc/sysconfig/rhn/
 rm -r /etc/salt/
 ----
 +
 . Remove Client Packages:
+
 +
+
+[source,shell]
 ----
 zypper rm salt salt-minion python*-salt sle-manager-tools-release
 ----
@@ -114,11 +123,14 @@ zypper rm salt salt-minion python*-salt sle-manager-tools-release
 
 .Procedure: Salt Bundle Client - Manual Registration Cleanup
 . To unregister, run:
+
 +
+
+[source,shell]
 ----
 systemctl stop venv-salt-minion
-zypper rm -y venv-salt-minion
-rm /etc/zypp/repos.d/susemanager\:channels.repo /etc/venv-salt-minion/*
+zypper rm -y venv-salt-minion sle-manager-tools-release
+rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
 rm -r /etc/venv-salt-minion/*
 ----
 
