--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc
@@ -21,6 +21,12 @@ All tools are included in these images simplifying deployment.
 
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
+[IMPORTANT]
+====
+Customized {productname} {productnumber} VM images are provided only for {sle-micro} {microversion}.
+To run the product on {sles} {bci-suma}, use the standard {sles} {bci-suma} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
+====
+
 [NOTE]
 ====
 For more information on preparing raw images, see https://documentation.suse.com/sle-micro/6.1/html/Micro-deployment-raw-images-virtual-machines/index.html#deployment-preparing-configuration-device[].
