--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -15,14 +15,18 @@ endif::[]
 
 * To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} {microversion} or {sles} {bci-suma} and [literal]``mgradm`` installed.
 
-* An in-place migration from {productname} 4.3 to {productnumber} is unsupported.
-  The underlying operating system has been changed from {sles} 15 SP4 to {sle-micro} or {sles} {bci-suma}.
+* An in-place migration from {productname} 4.3 to {productnumber} is not supported, regardless of whether the chosen host operating system is {sle-micro} {microversion} or {sles} {bci-suma}.
 
 * Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
 ** For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
 
 * Traditional contact protocol is no longer supported in {productname} 5.0 and later.
 
+[IMPORTANT]
+====
+This guide only covers the migration from {productname} 4.3 to {productnumber}.
+Migrating an existing {productname} {productnumber} instance to the same version while switching the host operating system from {sle-micro} {microversion} to {sles} {bci-suma}, or vice versa, is not handled by the [command]``mgradm migrate`` command.
+====
 
 === Hostnames
 
