--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -22,15 +22,13 @@ zypper ref
 
 +
 
-On a transactional system such as {sl-micro} or {leapmicro}::
+On a transactional system such as {sl-micro} or {leapmicro}: ::
 
 +
 
 --
 
-.. Apply available updates with [command]``transactional-update``:
-
-+
+Apply available updates with [command]``transactional-update``:
 
 [source,shell]
 ----
@@ -40,15 +38,13 @@ transactional-update
 --
 
 
-On {sles} or {leap}::
+On {sles} or {leap}: ::
 
 +
 
 --
 
-.. Update installed software with [command]``zypper``:
-
-+
+Update installed software with [command]``zypper``:
 
 [source,shell]
 ----
