--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -25,7 +25,7 @@ Images for {productname} {productnumber} Proxy are available at link:https://www
 [IMPORTANT]
 ====
 Customized {productname} {productnumber} VM images are provided only for {sle-micro} {microversion}.
-To run the product on {sles} {bci-suma}, use the standard {sles} {bci-suma} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
+To run the product on {sles} {bci-mlm}, use the standard {sles} {bci-mlm} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
 ====
 
 [NOTE]
