--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc
@@ -23,7 +23,7 @@ Images for {productname} {productnumber} Proxy are available at link:https://www
 
 [IMPORTANT]
 ====
-Customized {productname} {productnumber} VM images are provided only for {sle-micro} {microversion}.
+Customized {productname} {productnumber} VM images are provided only for {sl-micro} {microversion}.
 To run the product on {sles} {bci-mlm}, use the standard {sles} {bci-mlm} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
 ====
 
