--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -22,11 +22,7 @@ All tools are included in these images simplifying deployment.
 // 2025-02-17, ke: as of today, suse-manager directory is still in use
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-[IMPORTANT]
-====
-Customized {productname} {productnumber} VM images are provided only for {sl-micro} {microversion}.
-To run the product on {sles} {bci-mlm}, use the standard {sles} {bci-mlm} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
-====
+include::../snippet-warn-images-sl-micro.adoc[]
 
 [NOTE]
 ====
