--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vmdk-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vmdk-mlm.adoc
@@ -20,11 +20,7 @@ All tools are included in these images greatly simplifying deployment.
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-[IMPORTANT]
-====
-Customized {productname} {productnumber} VM images are provided only for {sl-micro} {microversion}.
-To run the product on {sles} {bci-mlm}, use the standard {sles} {bci-mlm} installation media available at https://www.suse.com/download/sles/ and enable the {productname} {productnumber} extensions on top of it.
-====
+include::../snippet-warn-images-sl-micro.adoc[]
 
 [NOTE]
 ====
