--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -1,34 +1,69 @@
 = {productname} Server Upgrade
 
-Before running the upgrade command, it is recommended to upgrade the [literal]``mgradm`` tool first.
+Before running the upgrade command, it is recommended to to update the host operating system.
+Updating the host operating system will also result in the update of the {productname} tooling such as the [literal]``mgradm`` tool.
 
-.Procedure: Upgrading Server
+.Procedure: Upgrading {productname} Server
 . Refresh software repositories with [command]``zypper``:
+
 +
+
+[source,shell]
 ----
 zypper ref
 ----
-. Apply available updates:
+
+. Depending on the host operating system, proceed with these steps:
+
 +
-.. For {sl-micro}:
+
+For a transactional system such as {sl-micro}: ::
+
 +
+
+--
+
+Apply available updates with [command]``transactional-update``:
+
+[source,shell]
 ----
 transactional-update
 ----
-If updates were applied, [literal]``reboot``.
+
+--
+
 +
-.. For {sles}:
+
+For {sles}: ::
+
 +
+
+--
+
+Update installed software with [command]``zypper``:
+
++
+
+[source,shell]
 ----
 zypper up
 ----
-+
-. The {productname} Server container can be updated using the following command:
+
+--
+
 +
 
+. If updates were applied, [literal]``reboot``.
+
+. The {productname} Server container can be updated using the following command:
+
++
+
+[source,shell]
 ----
 mgradm upgrade podman
 ----
+
 +
 
 This command will bring the status of the container up-to-date and restart the server.
@@ -44,6 +79,7 @@ To upgrade to a specific version, provide the tag parameter with the desired ima
 
 For more information on the upgrade command and its parameters, use the following command:
 
+[source,shell]
 ----
 mgradm upgrade podman -h
 ----
