--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -4,6 +4,7 @@ Before running the upgrade command, it is recommended to to update the host oper
 Updating the host operating system will also result in the update of the {productname} tooling such as the [literal]``mgradm`` tool.
 
 .Procedure: Upgrading {productname} Server
+
 . Refresh software repositories with [command]``zypper``:
 
 +
@@ -42,8 +43,6 @@ For {sles}: ::
 
 Update installed software with [command]``zypper``:
 
-+
-
 [source,shell]
 ----
 zypper up
@@ -53,6 +52,10 @@ zypper up
 
 +
 
+// FIXME / question
+// Or rebooting only on SL Micro after transactional-update? If yes, I'll
+// move it there.
++
 . If updates were applied, [literal]``reboot``.
 
 . The {productname} Server container can be updated using the following command:
