--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -1,52 +1,79 @@
 = {productname} Proxy Upgrade
 
-Before running the upgrade command, it is recommended to upgrade the [literal]``mgrpxy`` tool first.
+Before running the upgrade command, it is recommended to to update the host operating system.
+Updating the host operating system will also result in the update of the {productname} tooling such as the [literal]``mgrpxy`` tool.
 
-.Procedure
+.Procedure: Upgrading {productname} Proxy
 
 . Refresh software repositories with [command]``zypper``:
 
 +
 
+[source,shell]
 ----
 zypper ref
 ----
 
-. Apply available updates:
-
-.. For {sl-micro}:
+. Depending on the host operating system, proceed with these steps:
 
 +
 
+For a transactional system such as {sl-micro}: ::
+
++
+
+--
+
+Apply available updates with [command]``transactional-update``:
+
+[source,shell]
 ----
 transactional-update
 ----
 
-+
-
-If updates were applied, [literal]``reboot``.
+--
 
 +
 
-.. For {sles}:
+For {sles}: ::
 
 +
 
+--
+
+Update installed software with [command]``zypper``:
+
+[source,shell]
 ----
 zypper up
 ----
 
+--
+
 +
 
-. The {productname} {productnumber} Proxy containers running on [literal]``podman`` can be updated using the following command:
+// FIXME / question
+// Or rebooting only on SL Micro after transactional-update? If yes, I'll
+// move it there.
++
+. If updates were applied, [literal]``reboot``.
+
+. The {productname} Proxy containers running on [literal]``podman`` can be updated using the following command:
+
 +
 
+[source,shell]
 ----
 mgrpxy upgrade podman
 ----
+
 +
-. Or, those running on a Kubernetes cluster can update using:
+
+Or, those running on a Kubernetes cluster can update using:
+
 +
+
+[source,shell]
 ----
 mgrpxy upgrade kubernetes
 ----
