Apply suggestions from code review

--- a/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
@@ -52,8 +52,10 @@ dbus-uuidgen --ensure
 systemd-machine-id-setup
 ----
 
-If the cloned machine also has a folder in [path]``/var/log/journal/`` it also needs to be renamed with the new machine ID.
-Without this, [command]``journalctl`` would not persist any log and [command]``podman logs`` would not show anything.
+. If the cloned machine also has a folder in [path]``/var/log/journal/`` it needs to be renamed accordingly to the new machine ID.
+If names do not match, [command]``journalctl`` could not retrieve any log and [command]``podman logs`` would not show anything.
+
++
 
 ----
 mv /var/log/journal/* /var/log/journal/$(cat /etc/machine-id)
