Adjust container URLs and names for Uyuni and MLM 5.1

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc
@@ -15,19 +15,19 @@ For example:
 +
 .Podman
 ----
-podman pull registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
-podman save --output server.tar registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
+podman pull registry.opensuse.org/uyuni/server:latest
+podman save --output server.tar registry.opensuse.org/uyuni/server:latest
 ----
 +
 .Docker
 ----
-docker pull registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
-docker save --output server.tar registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
+docker pull registry.opensuse.org/uyuni/server:latest
+docker save --output server.tar registry.opensuse.org/uyuni/server:latest
 ----
 +
 .Skopeo
 ----
-skopeo copy docker://registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0 docker-archive:server.tar:registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
+skopeo copy docker://registry.opensuse.org/uyuni/server:latest docker-archive:server.tar:registry.opensuse.org/uyuni/server:latest
 ----
 +
 . Transfer the resulting [filename]``server-image.tar`` to the Server container host and load it using the following command:
