--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-air-gapped-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-air-gapped-deployment-mlm.adoc
@@ -37,7 +37,7 @@ To upgrade {productname} Proxy, users should follow the procedures defined in xr
 
 [source,shell]
 ----
-transactional-update pkg install mgrpxy* mgrctl* suse-manager-5.0-$ARCH$-proxy-*
+transactional-update pkg install mgrpxy* mgrctl* multi-linux-manager-5.1-$ARCH$-proxy-*
 ----
 
 . Reboot.
