cont. with testing (draft checking)

--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -35,7 +35,13 @@ transactional-update
 
 +
 
+ifeval::[{mlm-content} == true]
 For {sles}: ::
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+For {opensuse} TW: ::
+endif::[]
 
 +
 
