also rm channels.repo (per feedback)

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -109,7 +109,8 @@ systemctl stop salt-minion
 . Remove the repositories and configuration files:
 +
 ----
-rm /etc/zypp/repos.d/susemanager\:channels.repo
+rm -f /etc/zypp/repos.d/susemanager\:bootstrap.repo
+rm -f /etc/zypp/repos.d/susemanager\:channels.repo
 rm -r /etc/sysconfig/rhn/
 rm -r /etc/salt/
 ----
@@ -130,8 +131,9 @@ zypper rm salt salt-minion python*-salt sle-manager-tools-release
 [source,shell]
 ----
 systemctl stop venv-salt-minion
-zypper rm -y venv-salt-minion
-rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
+zypper rm -y venv-salt-minion sle-manager-tools-release
+rm -f /etc/zypp/repos.d/susemanager\:bootstrap.repo
+rm -f /etc/zypp/repos.d/susemanager\:channels.repo
 rm -r /etc/venv-salt-minion/*
 ----
 
