also rm channels.repo (per feedback)

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -106,7 +106,8 @@ systemctl stop salt-minion
 
 [source,shell]
 ----
-rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
+rm -f /etc/zypp/repos.d/susemanager\:bootstrap.repo
+rm -f /etc/zypp/repos.d/susemanager\:channels.repo
 rm -r /etc/sysconfig/rhn/
 rm -r /etc/salt/
 ----
@@ -130,7 +131,8 @@ zypper rm salt salt-minion python*-salt sle-manager-tools-release
 ----
 systemctl stop venv-salt-minion
 zypper rm -y venv-salt-minion sle-manager-tools-release
-rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
+rm -f /etc/zypp/repos.d/susemanager\:bootstrap.repo
+rm -f /etc/zypp/repos.d/susemanager\:channels.repo
 rm -r /etc/venv-salt-minion/*
 ----
 
