--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-air-gapped-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-air-gapped-deployment-suma.adoc
@@ -83,7 +83,7 @@ set -o history
 ----
 SCC_USERID=aXXXX
 PTFID=12345
-echo "registry.suse.com/a/$SCC_USERID/$PTFID/suse-manager/5.0/x86_64/server:latest-ptf-$PTFID" >>/tmp/ptf-images
+echo "registry.suse.com/a/$SCC_USERID/$PTFID/suse/manager/5.0/x86_64/server:latest-ptf-$PTFID" >>/tmp/ptf-images
 ----
 
 . Pull each of the container images of the PTF and save them in a tar archive.
