--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -2,6 +2,8 @@
 = Hub Online Synchronization
 
 
+//OM 2025-04-28: shall we write hub or HUb, peripheral or Peripheral? In the GUI, I saw mixed cases.
+
 == Introduction 
 
 Hub online synchronization reuses the existing repository syncing mechanism and synchronizes channels in the peripheral servers from the repositories on the hub server.
@@ -12,13 +14,13 @@ The main characteristics of this feature are:
 
 * There can only be one hub server per connection, with one or more peripheral servers.
 
-* Each peripheral server can only have one peripheral server. 
+* Each peripheral server can only have one hub server. 
 
 * Content can be synchronized on regular basis, or on demand.
 
 
 
-== Types of registration
+== Registration of the hub and peripheral servers
 
 Hub online synchronization is configured from menu menu:Admin[Hub Configuration].
 
@@ -27,13 +29,13 @@ Configuration process uses token which uniquely identifies peripheral server's c
 There are two ways to register a peripheral server to the hub server:
 
 . by using a combination of token creation on the peripheral, and subsequent registration on the hub server.
-  This method uses procedures <<peripheral-token-generation>> and <<token-transfer>>.
+  This method uses <<peripheral-token-generation>> and <<token-transfer>>.
 . by direct registration from the hub, without any interactions with the peripheral server. 
-  The steps are described in procedure <<direct-registration>>.
+  The steps for this method are described in <<direct-registration>>.
 
 
 
-=== Indirect (do we have an official name??) registration
+=== Registration from peripheral server by token generation
 
 Before being registered to the hub server, a token needs to be generated on the peripheral server and passed it to the administrator of the hub server.
 
@@ -50,7 +52,6 @@ Before being registered to the hub server, a token needs to be generated on the 
 [IMPORTANT]
 ==== 
 The only time token is displayed is at the time of its creation.
-Make sure to copy it and store safely .
 ====
 
 . Once generated, the token appears on the screen [literal]``Access Tokens``.
@@ -75,12 +76,12 @@ The generated token needs to be transferred to the hub server before it can be u
 
 
 
-=== Direct (do we have an official name??) registration
+=== Registration from the hub server directly
 
 It is possible initiate the registration of a peripheral server from hub server, without any interaction with the peripheral server.
 
 [[direct-registration]]
-.Procedure: Complete registration from the hub server
+.Procedure: Direct registering from the hub server
 
 . On the hub server, go to menu:Hub Configuration[Peripherals Configuration].
 . Click button btn:[Add peripheral].
@@ -93,39 +94,57 @@ It is possible initiate the registration of a peripheral server from hub server,
   * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
   * Use option [literal]``Paste a PEM certificate`` in cases when PEM certificate is used.
 . Click button btn:[Register].
+. The newly reigistered peripheral server will be shown in the menu:Systems[System List] with the value [literal]``Foreign`` in the column [literal]``System Type``.
+. To access its details, click on the peripheral server's name and select tab menu:Details[Peripheral Server].
 
+Peripheral server uses hub to access the vendor channels and does not connect to the {scclongform} directly.
+Therefore, if you open configured peripheral server's page menu:Admin[Setup Wizard > Organization Credentials], menu:Admin[Setup Wizard > Products] or menu:Admin[Setup Wizard > PAYG Connections], you will see a notification that this is peripheral server and its connections are managed via hub.
+
+
+=== Access tokens
+
+All existing tokens are shown in menu:Hub Configuration[Access Tokens].
+
+A token can be [literal]``Consumed`` and [literal]``Issued``.
+
+Consumed::
+This type of token is generated on the peripheral server and received by the hub server to be used
+
+Issued::
+This type of token is issued by the hub server to be used by the peripheral server.
+
+In addition to being deleted, a token can also be invalidated.
+
+//TO DO: What is the fundamental difference between these two operations? In both cases the connection between hub and periperal will be stopped. Can the invalidated token be re-validated?
+
+Be careful when using option btn:[Invalidate] as it permanently delets the existing token and removes the connection established between the hub and peripheral servers.
+
+
+=== Access hub server details from the peripheral server
+
+Every peripheral server stores the information about its hub server.
 
 [IMPORTANT]
 ====
-All existing tokens are shown in menu:Hub Configuration[Access Tokens].
-Be careful when using option btn:[Invalidate] as it permanently delets the existing token and removes the connection established between the hub and peripheral servers.
+A peripheral server can only have one hub server configured.
 ====
-
-//TO DO: 2025-04-22 - Add some info about issued and consumed tokens and invalidating.
-
-=== Access hub server details from the peripheral server
 
 .Procedure: Accessing hub server details
 . On the peripheral server, go to menu:Hub Configuration[Hub Details].
 . On the screen [literal]``Hub Details`` find the information about the hub server.
-. To download, edit or delete the root certificate, clicking btn:[Download], btn:[Edit] or btn:[Delete] respectively.
+.. Field [literal]``Server FQDN`` shows the hub server's FQDN.
+.. Field [literal]``Registration date`` shows the time when the peripheral serevr was registsred to the hub server. 
+.. Field [literal]``Last modified`` shows the time of the last saved configuration change. 
+.. Field [literal]``Root Certificate Authority`` shows certificate details.
+   To download, edit or delete the root certificate, clicking btn:[Download], btn:[Edit] or btn:[Delete] respectively.
+   Deleting the certificate will break the connection between servers.
+.. Field [literal]``GPG Public Key`` shows whether the GPG key has been configured for the hub server.
+   For more information about GPG keys between hub and peripheral servers, see <<gpg-for-hub-online-sync>>.
+.. Field [literal]``Mirrir credentials`` is the username the peripheral server uses when connecting to the hub server to synchronize vendor channels.
+   This username is generated automatically on the hub server, and then transmitted to the peripheral server during the registration phase.
 
-+
 
-[NOTE]
-====
-Amending certificate details will break the connection between the servers.
-====
-
-+
-
-. Field [literal]``GPG Public Key`` shows whether the GPG key has been configured for the hub server.
-  For more information about GPG keys between hub and peripheral servers, see <<hub-online-sync>>.
-
-. To deregister this peripheral server from the hub, click btn:[Deregister].
- 
-
-[[hub-online-sync]]
+[[gpg-for-hub-online-sync]]
 ==== GPG key usage with hub online synhronization
 
 When the packages are signed with GPG key, the key is automatically transmitted from hub to peripheral server.
@@ -140,7 +159,25 @@ Once the GPG key is created on the hub, field [literal]``GPG Public Key`` will b
 For more information about setting up own GPG key, see xref:administration:repo-metadata.adoc[].
 
 
-//HERE
-== Deregistering peripheral server
-. To deregister this peripheral server from the hub, click btn:[Deregister].
-. TBC
+=== Deregister peripheral server
+
+Deregistration can happen from both sides, from the hub or from the peripheral server.
+
+.Procedure: Deregistering from the peripheral server
+. Go to menu:Hub Configuration[Hub Details]. 
+. Click btn:[Deregister].
+. Confirm the operation by clicking btn:[Deregister] on the pop-up window.
+. Page menu:Hub Configuration[Hub Details] is now empty.
+
+.Procedure: Deregistering from the hub server
+. Go to menu:Hub Configuration[Peripheral Configuration].
+. Find the perpheral server on the list.
+. Click btn:[Deregister] next to the peripheral server's name.
+. The peripheral server is no longer shown on the list.
+
+
+== Synchronize channels from hub to peripheral server
+
+Synchronizing vendor channels for the configured hub and server is done via dedicated user interface.
+
+.Procedure: Synchronizing channels from hub to peripheral server
