--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -18,7 +18,13 @@ zypper ref
 
 +
 
+ifeval::[{mlm-content} == true]
 For a transactional system such as {sl-micro}: ::
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+For a transactional system such as {leapmicro}: ::
+endif::[]
 
 +
 
@@ -35,7 +41,13 @@ transactional-update
 
 +
 
+ifeval::[{mlm-content} == true]
 For {sles}: ::
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+For {leap}: ::
+endif::[]
 
 +
 
