--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -18,7 +18,13 @@ zypper ref
 
 +
 
+ifeval::[{mlm-content} == true]
 For a transactional system such as {sl-micro}: ::
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+For a transactional system such as {leapmicro}: ::
+endif::[]
 
 +
 
@@ -40,7 +46,7 @@ For {sles}: ::
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-For {opensuse} TW: ::
+For {leap}: ::
 endif::[]
 
 +
