--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -181,3 +181,28 @@ Deregistration can happen from both sides, from the hub or from the peripheral s
 Synchronizing vendor channels for the configured hub and server is done via dedicated user interface.
 
 .Procedure: Synchronizing channels from hub to peripheral server
+. Go to menu:Something_A[Something_B].
+  You will see page [literal]``Sync Channels from Hub to Peripheral``.
+. Select the channels you want to synchronize.
+. A pop-up window with the summary of your selections will open.
+. From the drop-down field [label]``Select an organization from the Peripheral to sync your channels to" select the correct organization.
+. Click btn:[Confirm] to confirm the selection.
+
+
+
+////
+OM 2025-04-28: This section will be completed once the migration UI is finalised, and we are ready to proceed with removing ISS v1 from teh documentation too.
+== [WIP] ISS Version 1 migration
+
+ISS v1 is deprecated.
+Its functionality is replaced by hub online synchroinzation.
+
+Customers who have ISS v1 configured are expected to migrate to hub online synchroization.
+
+.Procedure: Migrating ISS v1 to Hub online synchronization
+. Log in to peripheral server (in v1 terminology, this was slave server).
+. Go to menu:Admin:[Hub Configuration > Access Tokens].
+. Issue a new token for the hub server. 
+  Follow the steps from <<peripheral-token-generation>>.
+. etc... 
+////
