--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -181,8 +181,9 @@ Deregistration can happen from both sides, from the hub or from the peripheral s
 Synchronizing vendor channels for the configured hub and server is done via dedicated user interface.
 
 .Procedure: Synchronizing channels from hub to peripheral server
-. Go to menu:Something_A[Something_B].
-  You will see page [literal]``Sync Channels from Hub to Peripheral``.
+//FIX THIS: Awaiting developer's esponse baout the exact UI path to this form: . Go to menu:option_1[option_2].
+//  You will see page [literal]``Sync Channels from Hub to Peripheral``.
+. Open page [literal]``Sync Channels from Hub to Peripheral``.
 . Select the channels you want to synchronize.
 . A pop-up window with the summary of your selections will open.
 . From the drop-down field [label]``Select an organization from the Peripheral to sync your channels to" select the correct organization.
