--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -186,7 +186,7 @@ Synchronizing vendor channels for the configured hub and server is done via dedi
 . Open page [literal]``Sync Channels from Hub to Peripheral``.
 . Select the channels you want to synchronize.
 . A pop-up window with the summary of your selections will open.
-. From the drop-down field [label]``Select an organization from the Peripheral to sync your channels to" select the correct organization.
+. From the drop-down field [label]``Select an organization from the Peripheral to sync your channels to`` select the correct organization.
 . Click btn:[Confirm] to confirm the selection.
 
 
