move snippet to mlm directory

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vmdk-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vmdk-mlm.adoc
@@ -20,7 +20,7 @@ All tools are included in these images greatly simplifying deployment.
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-include::../snippet-warn-images-sl-micro.adoc[]
+include::./snippet-warn-images-sl-micro.adoc[]
 
 [NOTE]
 ====
