--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -22,7 +22,7 @@ All tools are included in these images simplifying deployment.
 // 2025-02-17, ke: as of today, suse-manager directory is still in use
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-include::../snippet-warn-images-sl-micro.adoc[]
+include::./snippet-warn-images-sl-micro.adoc[]
 
 [NOTE]
 ====
