--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc
@@ -21,7 +21,7 @@ All tools are included in these images simplifying deployment.
 
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-include::../snippet-warn-images-sl-micro.adoc[]
+include::./snippet-warn-images-sl-micro.adoc[]
 
 [NOTE]
 ====
