Add the EULA for SUSE Multi-Linux Manager

--- a/modules/legal/nav-legal-guide.adoc
+++ b/modules/legal/nav-legal-guide.adoc
@@ -16,6 +16,7 @@ endif::[]
 ifeval::[{mlm-content} == true]
 ** xref:copyright.adoc[Copyright Notice]
 ** xref:trademarks.adoc[Trademarks]
+** xref:eula.adoc[End User License Agreement]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
