--- a/modules/reference/pages/help/help-menu.adoc
+++ b/modules/reference/pages/help/help-menu.adoc
@@ -4,9 +4,10 @@
 The [guimenu]``Help`` section opens the current version of the {productname} documentation in a new browser tab.
 This is the documentation installed locally on your {productname} Server.
 
-For all versions and formats of the {productname} documentation, see https://documentation.suse.com/multi-linux-manager/.
+ifeval::[{mlm-content} == true]
+For all versions and formats of the {productname} documentation, see https://documentation.suse.com/multi-linux-manager/
+endif::[]
 
-[NOTE]
-====
-You can read EULA by going to [systemitem]``https://server.example.com/rhn/help/Eula.do``.
-====
+ifeval::[{uyuni-content} == true]
+For all versions and formats of the {productname} documentation, see https://www.uyuni-project.org/uyuni-docs/
+endif::[]
