--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -14,40 +14,51 @@ Updating the host operating system will also result in the update of the {produc
 zypper ref
 ----
 
+ifeval::[{mlm-content} == true]
 . Depending on the host operating system, proceed with these steps:
 
 +
 
-ifeval::[{mlm-content} == true]
 For a transactional system such as {sl-micro}: ::
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-For a transactional system such as {leapmicro}: ::
-endif::[]
 
 +
 
 --
 
-Apply available updates with [command]``transactional-update``:
+. Apply available updates with [command]``transactional-update``:
+
++
 
 [source,shell]
 ----
 transactional-update
 ----
 
+. If updates were applied, [literal]``reboot``.
+
 --
 
 +
 
-ifeval::[{mlm-content} == true]
-For {sles}: ::
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-For {leap}: ::
+. Apply available updates with [command]``transactional-update``:
+
++
+
+[source,shell]
+----
+transactional-update
+----
+
+. If updates were applied, [literal]``reboot``.
+
 endif::[]
+
+
+ifeval::[{mlm-content} == true]
+For {sles}: ::
 
 +
 
@@ -62,13 +73,9 @@ zypper up
 
 --
 
-+
+endif::[]
 
-// FIXME / question
-// Or rebooting only on SL Micro after transactional-update? If yes, I'll
-// move it there.
 +
-. If updates were applied, [literal]``reboot``.
 
 . The {productname} Proxy containers running on [literal]``podman`` can be updated using the following command:
 
