--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -117,7 +117,11 @@ In addition to being deleted, a token can also be invalidated.
 
 //TO DO: What is the fundamental difference between these two operations? In both cases the connection between hub and periperal will be stopped. Can the invalidated token be re-validated?
 
-Be careful when using option btn:[Invalidate] as it permanently delets the existing token and removes the connection established between the hub and peripheral servers.
+Be careful when using option btn:[Invalidate] as it no longer grants access to the other server.
+Invalidating the token can be undone, and token can be made valid again at any time.
+
+It is possible to delete a token.
+Deletion of the token can only occur when the token is not associated with a registered peripheral server or hub, and this action cannot be undone.
 
 
 === Access hub server details from the peripheral server
@@ -181,9 +185,9 @@ Deregistration can happen from both sides, from the hub or from the peripheral s
 Synchronizing vendor channels for the configured hub and server is done via dedicated user interface.
 
 .Procedure: Synchronizing channels from hub to peripheral server
-//FIX THIS: Awaiting developer's esponse baout the exact UI path to this form: . Go to menu:option_1[option_2].
-//  You will see page [literal]``Sync Channels from Hub to Peripheral``.
-. Open page [literal]``Sync Channels from Hub to Peripheral``.
+. Go to menu:Admin[Hub Configuration > Peripherals Configuration].
+. In the field [literal]``Synchronized channels`` click on btn:[Edit channels].
+. Page [literal]``Sync Channels from Hub to Peripheral`` opens.
 . Select the channels you want to synchronize.
 . A pop-up window with the summary of your selections will open.
 . From the drop-down field [label]``Select an organization from the Peripheral to sync your channels to`` select the correct organization.
