--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -45,7 +45,7 @@ Before being registered to the hub server, a token needs to be generated on the 
 . Click button btn:[Add token] and select option [literal]``Issue new token``.
 . In the field [literal]``Server FQDN`` on the form that opens type the FQDN of the hub server that will be using this token.
 . Click btn:[Issue].
-. A new form with the succesfuly generated token appears and button btn:[Copy].
+. A new form with the successfully generated token appears and button btn:[Copy].
 
 +
 
