--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -52,6 +52,7 @@ Before being registered to the hub server, a token needs to be generated on the 
 [IMPORTANT]
 ==== 
 The only time token is displayed is at the time of its creation.
+Save it in a safe place until it is later needed.
 ====
 
 . Once generated, the token appears on the screen [literal]``Access Tokens``.
