--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -78,7 +78,7 @@ The generated token needs to be transferred to the hub server before it can be u
 
 === Registration from the hub server directly
 
-It is possible initiate the registration of a peripheral server from hub server, without any interaction with the peripheral server.
+It is possible to initiate the registration of a peripheral server from hub server, without any interaction with the peripheral server.
 
 [[direct-registration]]
 .Procedure: Direct registering from the hub server
